finish search history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_product_details_client">ProductDetailsClient</string>
     <string name="title_activity_after_reserve">after_reserve</string>
     <string name="title_activity_upload_image">UploadImage</string>
+    <string name="title_activity_resreve_products_client">ResreveProductsClient</string>
 </resources>
