add name main supp and client

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_after_reserve">after_reserve</string>
     <string name="title_activity_upload_image">UploadImage</string>
     <string name="title_activity_resreve_products_client">ResreveProductsClient</string>
+    <string name="title_activity_update_details_client">UpdateDetailsClient</string>
 </resources>
